--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="{{url_for('static', path='css/style.css')}}">
+
 </head>
 <body>
     <p class="b1"><br><br>Make a SOWON &nbsp;&nbsp;  </p>
