--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static', path='css/style.css')}}">
-
+    <link rel="stylesheet" href="{{ url_for('static', path='css/style.css') }}"> 
 </head>
 <body>
-    <p class="b1"><br><br>Make a SOWON &nbsp;&nbsp;  </p>
-<p class="b3"><a href="https://blog.naver.com/make_a_sowon">블로그</a>
-    <p class="b8"> 소원을 이루는 날들 14개의 글 </p><p class="b11"><img src="/개굴2.png" alt="개굴" style="width: 100px;height:100px"></p></p>
-<p class="b2"><img src="/profileImage.png" alt="어묵"></p>
-<p class="b4"> 방wish <p class="b9"><i class="fas fa-carrot"></i> 방wish의 블로그에 오신 걸 환영합니다람쥐 <i class="fas fa-carrot"></i></p><p class="b5"> make_a_sowon </p>
-<p class="b6"> 소원을 이루는 방wish양 </p><p class="b7"><img src="/스크린샷 2024-03-20 21.53.50.png" alt="이웃목록" style="width:150px;height:auto"></p>
-<p class="b10"><img src="/루피.jpeg" alt="루피" style="width:500px;height:400px"></p><p class="b12">안녕하세요..쥔장입니다..
-<br>오늘은 제 블로그를 만들어 봤는데요..! <br> 어깨랑 목이 굉장히 아프지만,,<br>너무 재밌는 시간이었습니다..<i class="fas fa-heart"></i>
-<br>이렇게 코(딩어)린이인 저를 가르쳐 주시는 운영진 선생님들 감사합니다<i class="fas fa-heart"></i><br>그리고 우리 아기사자들 파이팅..!<br><br>-주인장 방wish-</p></p>
-<p class="b13">&lt;오늘 점심은 요론 걸 먹었습니다 &gt; <br><br>동네커피 불고기 샌드위치 <br>아메리카노 <br><br> &lt;후식&gt;<br>동네커피 잡곡호밀 앙버터&lt;-진짜 꿀맛</p>
+    <p class="b1">
+        <br>
+        <br>
+        Make a SOWON &nbsp;&nbsp;
+    </p>
+    <p class="b3">
+        <a href="https://blog.naver.com/make_a_sowon">블로그</a>
+        <p class="b8">소원을 이루는 날들 14개의 글</p>
+        <p class="b11">
+            <img src="{{ url_for('static', path='image/개굴2.png') }}" alt="개굴" style="width: 100px; height:100px">
+        </p>
+    </p>
+
+    <p class="b2">
+        <img src="{{ url_for('static', path='image/profileImage.png') }}" alt="어묵">
+    </p>
+
+    <p class="b4">
+        방wish
+        <p class="b9">
+            <i class="fas fa-carrot"></i> 
+            방wish의 블로그에 오신 걸 환영합니다람쥐
+            <i class="fas fa-carrot"></i>
+        </p>
+        <p class="b5">
+            make_a_sowon
+        </p>
+    
+    <p class="b6"> 소원을 이루는 방wish양 </p>
+
+    <p class="b7">
+        <img src="{{ url_for('static', path='image/스크린샷 2024-03-20 21.53.50.png') }}" alt="이웃목록" style="width:150px;height:auto">
+    </p>
+
+    <p class="b10">
+        <img src="{{ url_for('static', path='image/루피.jpeg') }}" alt="루피" style="width:500px;height:400px">
+    </p>
+    <p class="b12">
+        안녕하세요..쥔장입니다..<br>
+        오늘은 제 블로그를 만들어 봤는데요..!<br>
+        어깨랑 목이 굉장히 아프지만,,<br>
+        너무 재밌는 시간이었습니다..
+        <i class="fas fa-heart"></i><br>
+        이렇게 코(딩어)린이인 저를 가르쳐 주시는 운영진 선생님들 감사합니다
+        <i class="fas fa-heart"></i><br>
+        그리고 우리 아기사자들 파이팅..!<br>
+        <br>
+        -주인장 방wish-
+    </p>
+    <p class="b13">
+        &lt;오늘 점심은 요론 걸 먹었습니다 &gt; <br>
+        <br>
+        동네커피 불고기 샌드위치 <br>
+        아메리카노 
+        <br>
+        <br>
+        &lt;후식&gt;
+        <br>
+        동네커피 잡곡호밀 앙버터&lt;-진짜 꿀맛
+    </p>
 </body>
 </html>
