--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body{
 .b1{
     width: auto;
     height: 200px;
-    background-image: url(/다운로드.jpeg);
+    background-image: url(/static/image/다운로드.jpeg);
     font-size: 40px;
     text-align:right;
     font-family:'Times New Roman', Times, serif;
